--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -67,9 +67,9 @@ jobs:
     
     - script: |
         echo test
-        dotnet build stankinsv2/solution/StankinsV2/StankinsV2.sln 
+        dotnet build -c $(buildConfiguration) stankinsv2/solution/StankinsV2/StankinsV2.sln 
         dotnet tool install  -g coverlet.console
-        dotnet tool install  -g dotnet-reportgenerator-globaltool 
+        dotnet tool installmd  -g dotnet-reportgenerator-globaltool 
       displayName: build linux
   
     
