--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,7 @@ variables:
     deployLinux: 1
     stop : 0
     numberBuilds: $[counter('versioncounter', 466)]
+    doDeploy: $(Build.SourceVersionMessage)
 
 name: $(TeamProject)_$(BuildDefinitionName)_$(SourceBranchName)_$(Date:yyyyMMdd)$(Rev:.r)
 
