--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,8 +12,8 @@ variables:
     month: $(Date:MM)
     day: $(Date:dd)
     uk: $(Date:yyyyMMdd)
-    deployWindows: 0
-    deployLinux: 0
+    deployWindows: 1
+    deployLinux: 1
     startDeploy : 0
     numberBuilds: $[counter('versioncounter', 466)]
     message: $(Build.SourceVersionMessage)
@@ -88,7 +88,7 @@ jobs:
         echo 'report generator'
         reportgenerator "-reports:coverage.opencover.xml" "-targetdir:coveragereport" "-reporttypes:HTMLInline;HTMLSummary;Badges"
         echo 'artifact'
-        cp -r -v coveragereport  $(Build.ArtifactStagingDirectory)\cc\  
+        cp -r -v coveragereport  $(Build.ArtifactStagingDirectory)/cc/  
 
           
       
