--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -165,7 +165,7 @@ jobs:
 - job: DownloadFilesAndModifyBackend
 
   dependsOn: SetProps
-  condition:  or( eq(variables['startDeploy'],1),  endsWith(variables['numberBuilds'],'0'), contains(variables['messagePush'],'deploy'))
+  condition:  or( eq(variables['startDeploy'],1), contains(variables['messagePush'],'deploy'),  endsWith(variables['numberBuilds'],'0'))
 
   pool:
     vmImage: 'vs2017-win2016'
@@ -204,7 +204,7 @@ jobs:
   - DownloadFilesAndModifyBackend
   pool:
     vmImage: 'vs2017-win2016'
-  condition: or( eq(variables['startDeploy'],1),  endsWith(variables['numberBuilds'],'0'), contains(variables['messagePush'],'deploy'))
+  condition: or( eq(variables['startDeploy'],1), contains(variables['messagePush'],'deploy'),  endsWith(variables['numberBuilds'],'0'))
   variables:
     MyVersion: $[ dependencies.SetProps.outputs['setvarStep.PWversion'] ]  # map in the variable 
 
@@ -353,7 +353,7 @@ jobs:
   dependsOn: 
   - SetProps
   - BuildFrontEnd
-  condition: and(succeeded('BuildFrontEnd'), or( eq(variables['deployWindows'],1), endsWith(variables['numberBuilds'],'0'), contains(variables['messagePush'],'deploy') ) )
+  condition: and(succeeded('BuildFrontEnd'), or( eq(variables['deployWindows'],1), contains(variables['messagePush'],'deploy'), endsWith(variables['numberBuilds'],'0') ) )
   pool:
     vmImage: 'vs2017-win2016'
 
