--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -69,9 +69,13 @@ jobs:
     
     - script: |
         echo test
-        dotnet build -c $(buildConfiguration) stankinsv2/solution/StankinsV2/StankinsV2.sln 
+        
         dotnet tool install  -g coverlet.console
         dotnet tool install  -g dotnet-reportgenerator-globaltool 
+        dotnet tool install  -g dotnet-sonarscanner
+        dotnet sonarscanner begin /k:"ignatandrei_stankins" /d:sonar.organization="ignatandrei-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="$(sonarLogin)"
+        dotnet build -c $(buildConfiguration) stankinsv2/solution/StankinsV2/StankinsV2.sln 
+        dotnet sonarscanner end
       displayName: build linux
   
     
