--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -75,7 +75,7 @@ jobs:
         dotnet tool install  -g dotnet-sonarscanner
         dotnet sonarscanner begin /k:"ignatandrei_stankins" /d:sonar.organization="ignatandrei-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="$(sonarLogin)"
         dotnet build -c $(buildConfiguration) stankinsv2/solution/StankinsV2/StankinsV2.sln 
-        dotnet sonarscanner end
+        dotnet sonarscanner end /d:sonar.login="$(sonarLogin)"
       displayName: build linux
   
     
