--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -82,7 +82,7 @@ jobs:
         docker image ls
         docker container ls
         echo 'start regular test'
-        dotnet sonarscanner begin /k:"ignatandrei_stankins" /d:sonar.organization="ignatandrei-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="$(sonarLogin)"
+        dotnet sonarscanner begin /k:"ignatandrei_stankins" /d:sonar.coverage.exclusions="**Test*.cs" /d:sonar.cs.opencover.reportsPaths="coverage.opencover.xml" /d:sonar.organization="ignatandrei-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="$(sonarLogin)"
         dotnet build -c $(buildConfiguration) stankinsv2/solution/StankinsV2/StankinsV2.sln 
         dotnet test stankinsv2/solution/StankinsV2/StankinsTestXUnit/StankinsTestXUnit.csproj --logger trx  --logger "console;verbosity=normal" --collect "Code coverage"
         echo 'coverlet'
