--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -100,8 +100,8 @@ jobs:
       displayName: test with external dependencies sql server linux
     
     - script: |
-
-        dotnet sonarscanner begin /k:"ignatandrei_stankins" /d:sonar.cs.opencover.reportsPaths="coverage.opencover.xml" /v:$(numberBuilds) /d:sonar.coverage.exclusions="**/*Test*.cs"  /d:sonar.organization="ignatandrei-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="$(sonarLogin)"
+        ls -l $(Build.ArtifactStagingDirectory)/cc/coverage.opencover.xml
+        dotnet sonarscanner begin /k:"ignatandrei_stankins" /d:sonar.cs.opencover.reportsPaths="$(Build.ArtifactStagingDirectory)/cc/coverage.opencover.xml" /v:$(numberBuilds) /d:sonar.coverage.exclusions="**/*Test*.cs"  /d:sonar.organization="ignatandrei-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="$(sonarLogin)"
         dotnet build -c $(buildConfiguration) stankinsv2/solution/StankinsV2/StankinsV2.sln 
         dotnet sonarscanner end /d:sonar.login="$(sonarLogin)"
           
