--- a/stankinsv2/solution/StankinsV2/StankinsTestXUnit/StankinsTestXUnit.csproj
+++ b/stankinsv2/solution/StankinsV2/StankinsTestXUnit/StankinsTestXUnit.csproj
@@ -11,8 +11,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Remove="Assets\bookmarks_11_17_17.html" />
+    <None Remove="Assets\otherbooksmarks.html" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\otherbooksmarks.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Assets\bookmarks_11_17_17.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
