--- a/stankinsv2/solution/StankinsV2/Stankins.SqlServer/Stankins.SqlServer.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.SqlServer/Stankins.SqlServer.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.6.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\StankinsReceiverDB\StankinsReceiverDB.csproj" />
   </ItemGroup>
 
