--- a/stankinsv2/solution/StankinsV2/Stankins.Razor/Stankins.Razor.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.Razor/Stankins.Razor.csproj
@@ -6,6 +6,14 @@
     <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="erdotviz.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="erdotviz.cshtml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="RazorLight" Version="2.0.0-beta1" />
   </ItemGroup>
   <ItemGroup>
