--- a/stankinsv2/solution/StankinsV2/StankinsTestXUnit/StankinsTestXUnit.csproj
+++ b/stankinsv2/solution/StankinsV2/StankinsTestXUnit/StankinsTestXUnit.csproj
@@ -1,5 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
+    <PreserveCompilationContext>true</PreserveCompilationContext>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <IsPackable>false</IsPackable>
     <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
@@ -36,6 +37,7 @@
     <ProjectReference Include="..\Stankins.AzureDevOps\Stankins.AzureDevOps.csproj" />
     <ProjectReference Include="..\Stankins.File\Stankins.File.csproj" />
     <ProjectReference Include="..\Stankins.HTML\Stankins.HTML.csproj" />
+    <ProjectReference Include="..\Stankins.Razor\Stankins.Razor.csproj" />
     <ProjectReference Include="..\Stankins.SqlServer\Stankins.SqlServer.csproj" />
   </ItemGroup>
 </Project>
