--- a/stankinsv2/solution/StankinsV2/Stankins.Razor/Stankins.Razor.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.Razor/Stankins.Razor.csproj
@@ -6,14 +6,14 @@
     <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
-    <None Remove="database.cshtml" />
-    <None Remove="erdotviz.cshtml" />
+    <None Remove="SenderDBDiagramHTMLDocument.cshtml" />
+    <None Remove="SenderDBDiagramToDot.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="database.cshtml">
+    <Content Include="SenderDBDiagramHTMLDocument.cshtml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="erdotviz.cshtml">
+    <Content Include="SenderDBDiagramToDot.cshtml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
