--- a/stankinsv2/solution/StankinsV2/Stankins.SqlServer/Stankins.SqlServer.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.SqlServer/Stankins.SqlServer.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Stankins.File\Stankins.File.csproj" />
     <ProjectReference Include="..\StankinsReceiverDB\StankinsReceiverDB.csproj" />
   </ItemGroup>
 
