--- a/stankinsv2/solution/StankinsV2/Stankins.Console/Stankins.Console.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.Console/Stankins.Console.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Stankins.Interfaces\Stankins.Interfaces.csproj" />
+    <ProjectReference Include="..\Stankins.Office\Stankins.Office.csproj" />
     <ProjectReference Include="..\Stankins.Razor\Stankins.Razor.csproj" />
     <ProjectReference Include="..\Stankins.SqlServer\Stankins.SqlServer.csproj" />
     <ProjectReference Include="..\StankinsCommon\StankinsCommon.csproj" />
