--- a/stankinsv2/solution/StankinsV2/Stankins.SqlServer/Stankins.SqlServer.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.SqlServer/Stankins.SqlServer.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Stankins.File\Stankins.File.csproj" />
+    <ProjectReference Include="..\Stankins.Office\Stankins.Office.csproj" />
     <ProjectReference Include="..\Stankins.Razor\Stankins.Razor.csproj" />
     <ProjectReference Include="..\StankinsReceiverDB\StankinsReceiverDB.csproj" />
   </ItemGroup>
