added keys and tests

--- a/stankinsv2/solution/StankinsV2/StankinsTestXUnit/StankinsTestXUnit.csproj
+++ b/stankinsv2/solution/StankinsV2/StankinsTestXUnit/StankinsTestXUnit.csproj
@@ -16,10 +16,14 @@
   <ItemGroup>
     <None Remove="Assets\bg.html" />
     <None Remove="Assets\bookmarks_11_17_17.html" />
+    <None Remove="Assets\bookmarks_11_17_17N.html" />
     <None Remove="Assets\otherbooksmarks.html" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\bg.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Assets\bookmarks_11_17_17N.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Assets\otherbooksmarks.html">
