--- a/stankinsv2/solution/StankinsV2/Stankins.Razor/Stankins.Razor.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.Razor/Stankins.Razor.csproj
@@ -10,10 +10,14 @@
     <None Remove="SenderDBDiagramHTMLDocument.cshtml" />
     <None Remove="SenderDBDiagramToDot.cshtml" />
     <None Remove="SenderSolutionToDot.cshtml" />
+    <None Remove="SenderSolutionToHTMLDocument.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="images\pk.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="SenderSolutionToHTMLDocument.cshtml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="SenderSolutionToDot.cshtml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
