--- a/stankinsv2/solution/StankinsV2/Stankins.Console/Stankins.Console.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.Console/Stankins.Console.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Stankins.Amazon\Stankins.Amazon.csproj" />
     <ProjectReference Include="..\Stankins.AnalyzeSolution\Stankins.AnalyzeSolution.csproj" />
     <ProjectReference Include="..\Stankins.Interfaces\Stankins.Interfaces.csproj" />
     <ProjectReference Include="..\Stankins.Office\Stankins.Office.csproj" />
