added help text

--- a/stankinsv2/solution/StankinsV2/Stankins.Console/Stankins.Console.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.Console/Stankins.Console.csproj
@@ -9,6 +9,7 @@
     <PackageId>stankins.console</PackageId>
     <PackageVersion>1.0.0</PackageVersion>
     <PreserveCompilationContext>true</PreserveCompilationContext>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,11 +19,16 @@
   <ItemGroup>
     <ProjectReference Include="..\Stankins.Amazon\Stankins.Amazon.csproj" />
     <ProjectReference Include="..\Stankins.AnalyzeSolution\Stankins.AnalyzeSolution.csproj" />
+    <ProjectReference Include="..\Stankins.AzureDevOps\Stankins.AzureDevOps.csproj" />
     <ProjectReference Include="..\Stankins.Interfaces\Stankins.Interfaces.csproj" />
     <ProjectReference Include="..\Stankins.Office\Stankins.Office.csproj" />
+    <ProjectReference Include="..\Stankins.Process\Stankins.Process.csproj" />
     <ProjectReference Include="..\Stankins.Razor\Stankins.Razor.csproj" />
     <ProjectReference Include="..\Stankins.SqlServer\Stankins.SqlServer.csproj" />
+    <ProjectReference Include="..\Stankins.Version\Stankins.Version.csproj" />
+    <ProjectReference Include="..\Stankins.XML\Stankins.XML.csproj" />
     <ProjectReference Include="..\StankinsCommon\StankinsCommon.csproj" />
+    <ProjectReference Include="..\StankinsHelperCommands\StankinsHelperCommands.csproj" />
     <ProjectReference Include="..\StankinsObjects\StankinsObjects.csproj" />
     <ProjectReference Include="..\StankinsReceiverDB\StankinsReceiverDB.csproj" />
   </ItemGroup>
